plugins/kotlin/idea/tests/testData/highlighterMetaInfoWithComposeCompilerCheckers/SuspendComposable.kt.highlighting
// COMPILER_ARGUMENTS: -Xplugin=$TEST_DIR$/compose_fake_plugin.jar
// FILE: main.kt
// ALLOW_ERRORS
import androidx.compose.runtime.Composable

@Composable suspend fun <!HIGHLIGHTING("severity='ERROR'; descr='[COMPOSABLE_SUSPEND_FUN]'")!>Foo<!>() {}

fun acceptSuspend(fn: suspend () -> Unit) { print(fn) }
fun acceptComposableSuspend(fn: <!HIGHLIGHTING("severity='ERROR'; descr='[AMBIGUOUS_FUNCTION_TYPE_KIND]'")!>@Composable suspend () -> Unit<!>) { print(fn.hashCode()) }

val foo: suspend () -> Unit <!HIGHLIGHTING("severity='ERROR'; descr='[INITIALIZER_TYPE_MISMATCH]'")!>=<!> @Composable {}
val bar: suspend () -> Unit = {}
fun Test() {
    val composableLambda = @Composable {}
    acceptSuspend @Composable <!HIGHLIGHTING("severity='ERROR'; descr='[ARGUMENT_TYPE_MISMATCH]'")!>{}<!>
    acceptComposableSuspend @Composable {}
    acceptComposableSuspend(composableLambda)
    acceptSuspend(<!HIGHLIGHTING("severity='ERROR'; descr='[ARGUMENT_TYPE_MISMATCH]'")!><!HIGHLIGHTING("severity='ERROR'; descr='[COMPOSABLE_SUSPEND_FUN]'")!>@Composable <!HIGHLIGHTING("severity='ERROR'; descr='[ANONYMOUS_SUSPEND_FUNCTION]'")!>suspend<!> fun()<!> { }<!>)
}
